# hikvision_industrial_camera_driver

./: CMakeLists.txt  LICENSE.md  README.md  package.xml
doc/: Machine Vision Camera SDK Programming Manual_CH.chm  Machine Vision Camera SDK Programming Manual_EN.chm
hik_camera_/: show.launch
include/hik_camera_driver/: hik_camera_driver.h
include/hikvision_SDK/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  PixelType.h
launch/: hik_camera_raw.launch  hik_camera_rect.launch
lib/: libMvCameraControl.so.2.4.0.5
src/: hik_camera_driver.cpp  hik_camera_driver_node.cpp
